# WebMRI

./: .gitignore  README.md  index.css
plugin-GUIs/: bet-menu.json
src/: main.js
src/app/: index.html
src/app/plugin-GUIs/: registration-menu.json
src/app/src/: main.config.js
src/app/src/brainbrowser/: brainbrowser.js
src/brainbrowser/lib/: file-pool.js
src/brainbrowser/volume-viewer/modules/: loading.js  pluginsys.js
src/brainbrowser/volume-viewer/plugins/: bet2.js  flirt.js
src/brainbrowser/volume-viewer/volume-loaders/: minc.js
src/brainbrowser/volume-viewer/workers/: bet-worker.js  bet2.html.mem  dicom2nifti.html.mem  flirt-worker.js  flirt.html.mem
src/fsl/: README.md  Release.txt  build
src/fsl/config/alphaev6-dec-osf5.0-gcc2.95.2/: externallibs.mk  systemvars.mk
src/fsl/config/arm64-apple-darwin21.6.0-gcc14.0.0/: externallibs.mk  systemvars.mk
src/fsl/config/common/: rules.mk  vars.mk
src/fsl/config/generic/: externallibs.mk  systemvars.mk
src/fsl/config/i386-linux-gcc2.95.4/: externallibs.mk  systemvars.mk
src/fsl/config/i386-redhat-linux-gcc2.96/: externallibs.mk  systemvars.mk
src/fsl/config/i386-redhat-linux-gcc3.2/: externallibs.mk  systemvars.mk
src/fsl/config/i386-redhat-linux-gcc3.2.2/: externallibs.mk  systemvars.mk
src/fsl/config/i386-redhat-linux-gcc4.0.1/: externallibs.mk  systemvars.mk
src/fsl/config/i486-suse-linux-gcc3.2/: externallibs.mk  systemvars.mk
src/fsl/config/i586-suse-linux-gcc3.3.1/: externallibs.mk  externallibs.mk~  systemvars.mk
src/fsl/config/i586-suse-linux-gcc3.3.3/: externallibs.mk  systemvars.mk
src/fsl/config/i686-apple-darwin8-gcc4.0.1/: externallibs.mk
src/fsl/config/i686-pc-cygwin-gcc3.2/: externallibs.mk  systemvars.mk
src/fsl/config/i686-pc-cygwin-gcc3.3.1/: externallibs.mk  systemvars.mk
src/fsl/config/i686-pc-cygwin-gcc3.4.1/: externallibs.mk  systemvars.mk
src/fsl/config/i686-pc-cygwin-gcc3.4.4/: externallibs.mk  systemvars.mk
src/fsl/config/mips-sgi-irix6.5-gcc2.95.2/: systemvars.mk
src/fsl/config/powerpc-apple-darwin8-gcc4.0.0/: externallibs.mk  systemvars.mk
src/fsl/config/powerpc-apple-darwin8-gcc4.0.0-G5/: externallibs.mk  systemvars.mk
src/fsl/config/powerpc-apple-darwin8-gcc4.0.1-G5/: externallibs.mk
src/fsl/config/ppc-darwin-gcc3.1/: externallibs.mk  systemvars.mk
src/fsl/config/ppc-darwin-gcc3.3/: externallibs.mk  systemvars.mk
src/fsl/config/sparc-sun-solaris2.8-gcc2.95.2/: systemvars.mk
src/fsl/config/sparc-sun-solaris2.8-gcc2.95.3/: systemvars.mk
src/fsl/config/sparc-sun-solaris2.9-gcc2.95.3/: externallibs.mk  systemvars.mk
src/fsl/config/x86_64-redhat-linux-gcc3.4.4/: externallibs.mk  systemvars.mk
src/fsl/config/x86_64-redhat-linux-gcc4.0.2/: systemvars.mk
src/fsl/doc/: index.html
src/fsl/doc/afni/: index.html
src/fsl/doc/fsl/: compiling.html  contributors.html  customising.html  downloading.html  feeds.html  formats.html  glossary.html  intro.html  left.html  licence.html  list.html  macosx.html  other.html  top.html  whatsnew.html  windowsxp.html
src/fsl/doc/mcflirt/: index.html
src/fsl/emscripten/: flirt.js  flirt.wasm  fsl_pre.js
src/fsl/etc/: delegates.mgk
src/fsl/etc/fslconf/: feat.tcl  fsl.csh  fsl.sh
src/fsl/etc/matlab/: read_avw.m  read_avw_complex.m  save_avw.m  save_avw_complex.m  save_avw_hdr.m
src/fsl/etc/standard/: avg152T1.img  avg152T1_2_avg305.mat  avg152T1_LR-marked.img  avg152T1_b0.hdr  avg152T1_b0.img  avg152T1_brain_mask.img  avg152T1_brain_mask_deweight_eyes.hdr  avg152T1_brain_mask_deweight_eyes.img  avg152T1_brain_mask_dil.img  avg152T1_brain_mask_dil2.img  avg152T1_edges.hdr  avg152T1_edges.img  avg152T1_eye_mask.hdr  avg152T1_eye_mask.img  avg152T1_seg.img  avg152T1_skull.hdr  avg152T1_skull.img  avg152T1_strucseg.img  avg152T1_strucseg_periph.hdr  avg2mip.mat  (+4 more)
src/fsl/extras/: build
src/fsl/include/: tix.h
src/fsl/lib/: tclConfig.sh
src/fsl/src/fslview/src/fslview/: CMakeLists.txt  application.cpp  application.h  applicationwindowbase.ui  briconwidget.cpp  clusterbrowser.cpp  clusterbrowserbase.ui  clusterdata.cpp  clusterdata.h  config.h.in  copyright.txt  cursor.cpp  cursor.h  cursorwidget.cpp  cursorwidgetbase.ui  drawsettings.cpp  drawsettings.h  drawtoolbarbase.ui  drawwidget.cpp  drawwidget.h  filemanager.cpp  filemanager.h  graphmanager.h  histogramoptionsdialog.ui  histogramtoolbarbase.ui  imagebuffer.cpp  imagedatastore.cpp  imagedisplaysetting.cpp  imagedisplaysetting.h  imagegroup.cpp  imagegroup.h  imagewidget.cpp  imagewidget.h  lightboxwidget.cpp  lightboxwidget.h  lookuptable.cpp  lookuptable.h  main.cpp  maintoolbarbase.ui  modelfit.cpp  (+48 more)
src/fsl/src/miscmaths/: CMakeLists.txt  Makefile  base2z.cc  base2z.h  cspline.cc  cspline.h  depend.mk  f2z.cc  f2z.h  histogram.cc  kernel.cc  kertest.cc  minimize.cc  minimize.h  miscmaths.cc  miscmaths.h  miscprob.cc  miscprob.h  optimise.cc  quick.cc  rungekutta.cc  sparse_matrix.cc  sparsefn.cc  sparsefn.h  t2z.cc  t2z.h  volume.cc  volumeseries.cc  volumeseries.h
src/fsl/src/utils/: CMakeLists.txt  Makefile  check.cc  depend.mk  functions.cc  log.cc  matches.cc  options.cc  options.h  opttst.cc  parse.cc  time_tracer.cc  tracer_plus.h  usage.cc
src/fsl/tcl/: fslio.tcl
(+723 files in other folders)
